--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         </section>
     </header>
     <main>
-        <form class="max-lg:w-full absolute centralizar bg-form w-2/5 h-3/5 flex flex-col py-10 items-center rounded-3xl">
+        <form action="http://localhost/projetotelecall/src/server/" method="POST" class="max-lg:w-full absolute centralizar bg-form w-2/5 h-3/5 flex flex-col py-10 items-center rounded-3xl">
             <section
                 class="bg-primary w-2/5 h-14 rounded-2xl flex items-center justify-center text-white font-semibold mb-4">
                 <h1 class="text-2xl">Área do cliente</h1>
