--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <nav class="bg-secundary w-full h-7 flex justify-end items-center">
             <ul class="flex mr-7 gap-4">
                 <li>
-                    <a href="paginaLogin.php" class="cursor-pointer flex items-center bg-white rounded-2xl w-full px-4 h-6 gap-2">
+                    <a href="paginaLogin.html" class="cursor-pointer flex items-center bg-white rounded-2xl w-full px-4 h-6 gap-2">
                         <span><img src="img/icons/icon-perfil.svg" alt="user"></span>
                         <h2>
                             Área do cliente
