build: Tela de 2FA

--- a/src/paginaLogin.html
+++ b/src/paginaLogin.html
@@ -99,6 +99,13 @@
                 </section>
             </section>
         </form>
+        <section
+        class="z-50 max-lg:w-full centralizar bg-form w-full flex flex-col pt-24 items-center rounded-3xl"
+        >
+            <section class="bg-primary w-2/5 h-14 rounded-2xl flex items-center justify-center text-white font-semibold mb-4">
+                <h1 class="text-2xl">Área do cliente</h1>
+    
+        </section>
         <form action="" method="POST"
             id="master"
             class="max-lg:w-full absolute centralizar bg-form w-2/4 h-3/4 !hidden flex flex-col pt-24 items-center rounded-3xl">
