--- a/src/paginaLogin.html
+++ b/src/paginaLogin.html
@@ -74,7 +74,7 @@
                     <a class="text-red-700 font-semibold" href="./paginaCadastro.html">Cadastre-se aqui.</a>
                 </span>
                 <span class="absolute text-xs right-0 top-1 text-padrao">
-                    <a class="font-semibold text-red-700" href="#">Esqueci a senha.
+                    <a class="font-semibold text-red-700" href="./redefinirSenha.html">Esqueci a senha.
                     </a>
                 </span>
                 <section class="flex w-full justify-evenly mt-16">
