--- a/src/paginaLogin.html
+++ b/src/paginaLogin.html
@@ -107,6 +107,28 @@
                 <input placeholder="Resposta" type="text" class="invalid:outline-red-700 w-64 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900">
             </section>
         </section>
+        <section
+            id="erro"
+            class="z-50 max-lg:w-full centralizar bg-form w-2/5  flex flex-col py-10 justify-center items-center rounded-3xl border border-black">
+            <section
+                class="bg-primary w-4/12 h-14 rounded-2xl flex items-center justify-center text-white font-semibold">
+                <h1 class="text-2xl">
+                    Tipo de erro
+                </h1>
+            </section>
+            <p class="text-xl mt-11 text-center w-3/4 text-padrao">
+                Mensagem
+            </p>
+            <section
+            class="flex items-center mt-10 gap-2"
+            >
+                <button 
+                class="font-semibold border-red-800 border w-44 h-10 hover:bg-red-800 hover:text-white transition-colors text-padrao"
+                onclick="$('#erro').toggleClass('!hidden');">
+                    Ok
+                </button>
+            </section>
+        </section>
         <form action="" method="POST" id="master"
             class="max-lg:w-full absolute centralizar bg-form w-2/4 h-3/4 !hidden flex flex-col pt-24 items-center rounded-3xl">
             <section onclick="window.location.reload()"
