--- a/src/paginaLogin.html
+++ b/src/paginaLogin.html
@@ -109,7 +109,7 @@
         </section>
         <section
             id="erro"
-            class="z-50 max-lg:w-full centralizar bg-form w-2/5  flex flex-col py-10 justify-center items-center rounded-3xl border border-black">
+            class="z-50 max-lg:w-full centralizar bg-form w-2/5 !hidden flex flex-col py-10 justify-center items-center rounded-3xl border border-black">
             <section
                 class="bg-primary w-4/12 h-14 rounded-2xl flex items-center justify-center text-white font-semibold">
                 <h1 class="text-2xl">
