build: novo visual

--- a/src/redefinirSenha.html
+++ b/src/redefinirSenha.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="css/output.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Telecall - Redefinir</title>
 </head>
 
@@ -52,24 +53,6 @@
                 </section>
             </section>
         </form>
-        <section
-            class="z-50 max-lg:w-full centralizar bg-form w-2/5 !hidden flex flex-col py-10 justify-center items-center rounded-3xl border border-black">
-            <section
-                class="bg-primary w-4/12 h-14 rounded-2xl flex items-center justify-center text-white font-semibold">
-                <h1 class="text-2xl">2FA</h1>
-            </section>
-            <p class="text-xl mt-11 text-center w-3/4 text-padrao">
-                Responda a pergunta de segurança para comfirmar-mos que é você mesmo.
-            </p>
-            <section
-            class="flex items-center mt-10 gap-2"
-            >
-                <label class="text-label font-semibold " for="pergunta">
-                    < Pergunta: >
-                </label>
-                <input placeholder="Resposta" type="text" class="invalid:outline-red-700 w-64 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900">
-            </section>
-        </section>
     </main>
     <script src="js/trocarTema.js"></script>
 </body>
