--- a/src/paginaLoginComum.html
+++ b/src/paginaLoginComum.html
@@ -1,109 +1,98 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="dark">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Telecall - Pagina Principal</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="css/output.css" rel="stylesheet" />
-    <title>Telecall - Area do Cliente</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      * {
+        font-family: "Mulish", sans-serif;
+      }
+    </style>
   </head>
-
-  <body class="transition-colors">
-    <header class="shadow-lg shadow-zinc-400">
-      <nav class="bg-secundary w-full h-7 flex justify-end items-center">
-        <ul class="mr-7">
-          <li>
-            <button
-              id="themes"
-              class="flex items-center justify-start bg-white rounded-2xl w-16 h-6"
-            >
-              <img
-                class="w-10 invert"
-                src="img/icons/icone_ps.png"
-                alt="icone-tema"
-              />
-            </button>
-          </li>
-        </ul>
-      </nav>
-      <section class="bg-primary flex justify-start h-16 items-center">
+  <body>
+    <header class="flex bg-primary max-lg:justify-between z-10">
+      <section>
         <img
-          class="ml-5 h-14 rounded-3xl"
-          src="img/logo-telecall.png"
-          alt="Logo-Telecall"
+          onclick="window.location.href= 'index.html'"
+          id="logo"
+          class="w-4/5 pl-5 py-4 max-sm:w-2/4 cursor-pointer"
+          src="img/logotelecall.png"
+          alt="logo-telecall"
         />
       </section>
     </header>
-    <main>
+    <main >
       <form
+        method="post"
         action="server/auth_comum.php"
-        method="POST"
-        id="cliente"
-        class="max-lg:w-full absolute centralizar bg-form w-2/4 h-3/4 flex flex-col pt-24 items-center rounded-3xl"
+        class="bg-stone-100 shadow-lg shadow-stone-400 w-2/4 absolute top-por left-2/4 -translate-x-2/4 -translate-y-2/4 rounded-lg border border-stone-500 max-lg:w-full"
       >
-        <section
-          onclick="window.location.href = 'paginaLoginTipo.html'"
-          class="absolute left-7 top-7 bg-primary w-24 h-10 rounded-md flex items-center justify-center text-white font-semibold mb-4 cursor-pointer"
-        >
-          Voltar
-        </section>
-        <section
-          class="bg-primary w-2/5 h-14 rounded-2xl flex items-center justify-center text-white font-semibold mb-4"
-        >
-          <h1 class="text-2xl">Área do cliente</h1>
-        </section>
-        <section class="flex flex-col">
-          <label for="login" class="my-2 text-label font-semibold">Login</label>
-          <input
-            placeholder="Digite seu login"
-            class="invalid:outline-red-700 w-64 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2"
-            type="text"
-            id="login"
-            name="login"
-            required
-          />
-          <label for="senha" class="my-2 text-label font-semibold">Senha</label>
-          <input
-            placeholder="Digite sua senha"
-            class="invalid:outline-red-700 w-64 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2"
-            type="password"
-            id="senha"
-            name="senha"
-            required
-          />
-        </section>
-        <section class="relative w-60">
-          <span class="absolute text-xs left-0 top-1 text-padrao"
-            >Ainda não é cliente?<br />
-            <a class="text-red-700 font-semibold" href="./paginaCadastro.html"
-              >Cadastre-se aqui.</a
-            >
-          </span>
-          <span class="absolute text-xs right-0 top-1 text-padrao">
-            <a class="font-semibold text-red-700" href="./redefinirSenha.html"
-              >Esqueci a senha.
-            </a>
-          </span>
-          <section class="flex w-full justify-evenly mt-16">
+      <a href="paginaLoginTipo.html" class="absolute top-8 left-8 text-lg">Voltar</a>
+        <section class="px-20 py-14 flex flex-col gap-14">
+          <section class="justify-center flex items-center">
+            <span class="font-bold text-2xl max-lg:text-xl">Cliente Comum</span>
+          </section>
+          <section class="flex flex-col justify-center items-center gap-4">
+            <section class="flex flex-col gap-2">
+              <label for="login">Login</label>
+              <input
+                type="text"
+                class="h-10 w-72 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
+                placeholder="Digite aqui seu login"
+                required
+              />
+            </section>
+            <section class="flex flex-col gap-2">
+              <label for="senha">Senha</label>
+              <input
+                type="password"
+                class="h-10 w-72 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
+                placeholder="Digite aqui sua senha"
+                required
+              />
+            </section>
+          </section>
+          <section class="flex flex-col justify-center items-center relative">
+            <section >
+              <section>
+                <span class="absolute text-xs left-1/4 max-lg:-left-4 -top-12 text-padrao"
+                  >Ainda não é cliente?<br />
+                  <a
+                    class="text-red-700 font-semibold"
+                    href="paginaCadastro.html"
+                    >Cadastre-se aqui.</a
+                  >
+                </span>
+              </section>
+              <section>
+                <a
+                  class="text-red-700 font-semibold absolute text-xs right-1/4 max-lg:-right-4 -top-12"
+                  href="redefinirSenha.html"
+                  >Esqueci a senha</a
+                >
+              </section>
+            </section>
             <button
-              type="submit"
-              class="font-semibold border-red-800 border w-44 h-10 hover:bg-red-800 hover:text-white transition-colors text-padrao"
+              class="font-semibold hover:bg-red-700 bg-white hover:text-white transition-colors shadow-xl shadow-stone-300 w-32 h-10 border-red-700 border text-red-700"
             >
               Entrar
-            </button>
-            <button
-              type="reset"
-              class="font-semibold left-0 border-red-800 border w-10 h-10 hover:bg-red-800 hover:text-white transition-colors text-padrao"
-            >
-              &cross;
             </button>
           </section>
         </section>
       </form>
-     
     </main>
-    <script src="js/trocarTema.js"></script>
   </body>
+  <script></script>
 </html>
