--- a/src/paginaLoginTipo.html
+++ b/src/paginaLoginTipo.html
@@ -1,69 +1,68 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="dark">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Telecall - Pagina Principal</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="css/output.css" rel="stylesheet" />
-    <title>Telecall - Area do Cliente</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      * {
+        font-family: "Mulish", sans-serif;
+      }
+    </style>
   </head>
-
-  <body class="transition-colors">
-    <header class="shadow-lg shadow-zinc-400">
-      <nav class="bg-secundary w-full h-7 flex justify-end items-center">
-        <ul class="mr-7">
-          <li>
-            <button
-              id="themes"
-              class="flex items-center justify-start bg-white rounded-2xl w-16 h-6"
-            >
-              <img
-                class="w-10 invert"
-                src="img/icons/icone_ps.png"
-                alt="icone-tema"
-              />
-            </button>
-          </li>
-        </ul>
-      </nav>
-      <section class="bg-primary flex justify-start h-16 items-center">
+  <body>
+    <header class="flex bg-primary max-lg:justify-between z-10">
+      <section>
         <img
-          class="ml-5 h-14 rounded-3xl"
-          src="img/logo-telecall.png"
-          alt="Logo-Telecall"
+        onclick="window.location.href= 'index.html'"
+          id="logo"
+          class="w-4/5 pl-5 py-4 max-sm:w-2/4 cursor-pointer"
+          src="img/logotelecall.png"
+          alt="logo-telecall"
         />
       </section>
     </header>
     <main>
       <section
-        class="max-lg:w-full absolute centralizar bg-form w-2/4 h-3/4 py-14 flex flex-col justify-around items-center rounded-3xl"
+        class="bg-stone-100 shadow-lg shadow-stone-400 max-w-xl absolute top-por left-2/4 -translate-x-2/4 -translate-y-2/4 rounded-lg border border-stone-500 max-lg:w-full"
       >
-        <section
-          class="bg-primary w-2/5 h-14 rounded-2xl flex items-center justify-center text-white font-semibold mb-4"
-        >
-          <h1 class="text-2xl">Bem vindo</h1>
-        </section>
-        <section class="w-64 text-center text-2xl text-padrao">
-          <p>Antes de continuar, diga qual seu tipo de usuario?</p>
-        </section>
-        <section class="mt-10 flex gap-5">
-          <button
-            onclick="window.location.href = 'paginaLoginMaster.html'"
-            class="font-semibold left-0 h-10 px-10 border-red-800 border hover:bg-red-800 hover:text-white transition-colors text-padrao"
-          >
-            Master
-          </button>
-          <button
-            onclick="window.location.href = 'paginaLoginComum.html'"
-            class="font-semibold left-0 h-10 px-10 border-red-800 border hover:bg-red-800 hover:text-white transition-colors text-padrao"
-          >
-            Comum
-          </button>
+        <section class="px-20 py-14 flex flex-col gap-16">
+          <section class="justify-center flex items-center">
+            <span class="font-bold text-2xl max-lg:text-xl">Bem vindo</span>
+          </section>
+          <section class="flex justify-center items-center">
+            <p class="text-center text-xl max-lg:text-lg">
+              Antes de continuar, diga qual seu tipo de usuario?
+            </p>
+          </section>
+          <section class="flex justify-center items-center gap-5">
+            <button
+              onclick="window.location.href = 'paginaLoginMaster.html'"
+              class="font-semibold hover:bg-red-700 bg-white hover:text-white transition-colors shadow-xl shadow-stone-300 w-32 h-10 border-red-700 border text-red-700"
+            >
+              Master
+            </button>
+            <button
+              onclick="window.location.href = 'paginaLoginComum.html'"
+              class="font-semibold hover:bg-red-700 bg-white hover:text-white transition-colors shadow-xl shadow-stone-300 w-32 h-10 border-red-700 border text-red-700"
+            >
+              Comum
+            </button>
+          </section>
         </section>
       </section>
     </main>
-    <script src="js/trocarTema.js"></script>
   </body>
+  <script></script>
 </html>
