--- a/src/index.html
+++ b/src/index.html
@@ -166,13 +166,13 @@
           />
         </section>
       </section>
-      <section class="flex flex-col justify-center items-center text-blue-900">
+      <section class="flex flex-col justify-center items-center text-padrao">
         <span class="font-semibold text-2xl my-10 max-lg:text-base"
           >Beneficios para sua empresa.</span
         >
         <section class="flex flex-wrap justify-center gap-10 w-4/5">
           <section
-            class="flex w-72 flex-col h-72 justify-center items-center shadow-lg shadow-stone-500 text-center gap-5 p-8 rounded-2xl hover:scale-105 transition-transform max-lg:w-48 max-lg:h-48 max-lg:text-xs max-lg:gap-2"
+            class="flex w-72 flex-col h-72 justify-center items-center shadow-lg shadow-slate-900 text-center gap-5 p-8 rounded-2xl hover:scale-105 transition-transform max-lg:w-48 max-lg:h-48 max-lg:text-xs max-lg:gap-2"
           >
             <span>Redução de custos</span>
             <img
@@ -186,7 +186,7 @@
             >
           </section>
           <section
-            class="flex w-72 flex-col h-72 justify-center items-center shadow-lg shadow-stone-500 text-center gap-5 p-8 rounded-2xl hover:scale-105 transition-transform max-lg:w-48 max-lg:h-48 max-lg:text-xs max-lg:gap-2"
+            class="flex w-72 flex-col h-72 justify-center items-center shadow-lg shadow-slate-900 text-center gap-5 p-8 rounded-2xl hover:scale-105 transition-transform max-lg:w-48 max-lg:h-48 max-lg:text-xs max-lg:gap-2"
           >
             <span>Pronto para usar</span>
             <img
@@ -200,7 +200,7 @@
             >
           </section>
           <section
-            class="flex w-72 flex-col h-72 justify-center items-center shadow-lg shadow-stone-500 text-center gap-5 p-8 rounded-2xl hover:scale-105 transition-transform max-lg:w-48 max-lg:h-48 max-lg:text-xs max-lg:gap-2"
+            class="flex w-72 flex-col h-72 justify-center items-center shadow-lg shadow-slate-900 text-center gap-5 p-8 rounded-2xl hover:scale-105 transition-transform max-lg:w-48 max-lg:h-48 max-lg:text-xs max-lg:gap-2"
           >
             <span>Modernização</span>
             <img
@@ -214,7 +214,7 @@
             >
           </section>
           <section
-            class="flex w-72 flex-col h-72 justify-center items-center shadow-lg shadow-stone-500 text-center gap-5 p-8 rounded-2xl hover:scale-105 transition-transform max-lg:w-48 max-lg:h-48 max-lg:text-xs max-lg:gap-2"
+            class="flex w-72 flex-col h-72 justify-center items-center shadow-lg shadow-slate-900 text-center gap-5 p-8 rounded-2xl hover:scale-105 transition-transform max-lg:w-48 max-lg:h-48 max-lg:text-xs max-lg:gap-2"
           >
             <span>Manutenção</span>
             <img
@@ -225,7 +225,7 @@
             <span>Realizadas de forma ágil e sem custo adicional.</span>
           </section>
           <section
-            class="flex w-72 flex-col h-72 justify-center items-center shadow-lg shadow-stone-500 text-center gap-5 p-8 rounded-2xl hover:scale-105 transition-transform max-lg:w-48 max-lg:h-48 max-lg:text-xs max-lg:gap-2"
+            class="flex w-72 flex-col h-72 justify-center items-center shadow-lg shadow-slate-900 text-center gap-5 p-8 rounded-2xl hover:scale-105 transition-transform max-lg:w-48 max-lg:h-48 max-lg:text-xs max-lg:gap-2"
           >
             <span>Logística Completa</span>
             <img
@@ -236,7 +236,7 @@
             <span>Entrega e retirada em todo o Brasil.</span>
           </section>
           <section
-            class="flex w-72 flex-col h-72 justify-center items-center shadow-lg shadow-stone-500 text-center gap-5 p-8 rounded-2xl hover:scale-105 transition-transform max-lg:w-48 max-lg:h-48 max-lg:text-xs max-lg:gap-2"
+            class="flex w-72 flex-col h-72 justify-center items-center shadow-lg shadow-slate-900 text-center gap-5 p-8 rounded-2xl hover:scale-105 transition-transform max-lg:w-48 max-lg:h-48 max-lg:text-xs max-lg:gap-2"
           >
             <span>Suporte</span>
             <img
@@ -251,7 +251,7 @@
       <section class="flex flex-col items-center">
         <h2
           id="localizacao"
-          class="my-10 text-2xl font-medium text-label max-lg:text-base"
+          class="my-10 text-2xl font-medium text-padrao max-lg:text-base"
         >
           Nossa localização
         </h2>
@@ -265,7 +265,7 @@
         </iframe>
       </section>
       <section class="flex flex-col items-center">
-        <section class="w-5/6 text-center justify-center">
+        <section class="w-5/6 text-center text-padrao justify-center">
           <h2 id="sobre" class="my-10 text-2xl font-medium max-lg:text-base">
             Sobre a Telecall
           </h2>
@@ -319,7 +319,7 @@
           <section
             class="flex flex-col py-5 px-9 text-center bg-white rounded-2xl"
           >
-            <h2 class="mb-4 text-blue-900 font-medium">Contato</h2>
+            <h2 class="mb-4 text-padrao font-medium">Contato</h2>
             <ul class="text-red-700 font-medium">
               <li>joselizandro@souunisuam.com.br</li>
               <li>
@@ -340,7 +340,7 @@
           <section
             class="flex flex-col py-5 px-9 text-center bg-white rounded-2xl"
           >
-            <h2 class="mb-4 text-blue-900 font-medium">Descubra</h2>
+            <h2 class="mb-4 text-padrao font-medium">Descubra</h2>
             <ul class="text-red-700 font-medium">
               <li>
                 <a href="#beneficios"> Beneficios </a>
@@ -362,7 +362,7 @@
           <section
             class="flex flex-col py-5 px-9 text-center bg-white rounded-2xl"
           >
-            <h2 class="mb-4 text-blue-900 font-medium">Links</h2>
+            <h2 class="mb-4 text-padrao font-medium">Links</h2>
             <ul class="text-red-700 font-medium">
               <li>
                 <a href="paginaPrincipal.html"> Home </a>
@@ -378,6 +378,12 @@
         </section>
       </section>
     </footer>
+    <section 
+    class="bg-primary flex w-full fixed bottom-0 h-6 justify-end pr-5 items-center gap-5"
+    >
+    <button id="themes" class="flex text-sm justify-center items-center text-padrao bg-white rounded-full h-5 px-2"><img src="img/icons/theme.png" class="invert w-4" alt="icon perfil">Tema</button>
+      <a href="paginaLoginTipo.html" class="flex text-sm justify-center items-center bg-white rounded-full h-5 px-2"><img src="img/icons/icon-perfil.svg" alt="icon perfil"> Área do cliente</a>
+    </section>
     <script src="js/buttonTop.js"></script>
     <script src="js/carrossel.js"></script>
     <script src="js/trocarTema.js"></script>
