--- a/src/paginaLoginMaster.html
+++ b/src/paginaLoginMaster.html
@@ -76,6 +76,11 @@
         </section>
       </form>
     </main>
+     <section 
+    class="bg-primary flex w-full fixed bottom-0 h-6 justify-end pr-5 items-center gap-5"
+    >
+    <button id="themes" class="flex text-sm justify-center items-center text-padrao bg-white rounded-full h-5 px-2"><img src="img/icons/theme.png" class="invert w-4" alt="icon perfil">Tema</button>
+    </section>
   </body>
-  <script></script>
+  <script src="js/trocarTema.js"></script>
 </html>
