--- a/src/paginaLoginTipo.html
+++ b/src/paginaLoginTipo.html
@@ -49,13 +49,13 @@
           <section class="flex justify-center items-center gap-5">
             <button
               onclick="window.location.href = 'paginaLoginMaster.html'"
-              class="font-semibold hover:bg-red-700 bg-modal-button hover:text-white transition-colors w-32 h-10 border-red-700 border text-red-700"
+              class="font-semibold hover:bg-red-700 bg-modal-button hover:text-white transition-colors w-32 h-10 border-red-700 border text-padrao"
             >
               Master
             </button>
             <button
               onclick="window.location.href = 'paginaLoginComum.html'"
-              class="font-semibold hover:bg-red-700 bg-modal-button hover:text-white transition-colors w-32 h-10 border-red-700 border text-red-700"
+              class="font-semibold hover:bg-red-700 bg-modal-button hover:text-white transition-colors w-32 h-10 border-red-700 border text-padrao"
             >
               Comum
             </button>
