--- a/src/paginaCadastro.html
+++ b/src/paginaCadastro.html
@@ -8,265 +8,187 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="css/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <style>
+      * {
+        font-family: "Mulish", sans-serif;
+      }
+    </style>
     <title>Telecall - Cadastro</title>
   </head>
-
-  <body>
-    <header class="shadow-lg shadow-zinc-400">
-      <nav class="bg-secundary w-full h-7 flex justify-end items-center">
-        <ul class="mr-7">
-          <li>
-            <button
-              id="themes"
-              class="flex items-center bg-white rounded-2xl w-16 h-6"
-            >
-              <img class="w-10" src="img/icons/icone_ps.png" alt="icone-tema" />
-            </button>
-          </li>
-        </ul>
-      </nav>
-      <section class="bg-primary flex justify-start h-16 items-center">
+  <body class="max-lg:flex max-lg:flex-col">
+    <header class="flex bg-primary max-lg:justify-between z-10">
+      <section>
         <img
-          class="ml-5 h-14 rounded-3xl"
-          src="img/logo-telecall.png"
-          alt="Logo-Telecall"
+          onclick="window.location.href= 'index.html'"
+          id="logo"
+          class="w-4/5 pl-5 py-4 max-sm:w-2/4 cursor-pointer"
+          src="img/logotelecall.png"
+          alt="logo-telecall"
         />
       </section>
     </header>
-
-    <main>
+    <main class="">
       <form
-        class="absolute h-4/5 bg-form flex flex-col px-10 items-center rounded-3xl justify-center" method="post" action="<?php echo htmlspecialchars($_SERVER["PHP_SELF"]);?>" 
+        method="post"
+        action="server/auth_comum.php"
+        class="bg-modal shadow-lg shadow-stone-700 max-lg:w-screen max-lg:h-screen max-lg:flex max-lg:flex-col max-lg:justify-center absolute max-lg:top-0 max-lg:transform-none max-lg:left-0 top-por left-2/4 -translate-x-2/4 -translate-y-2/4 rounded-lg border border-stone-500"
       >
-        <section class="flex flex-col justify-center items-center">
-          <section
-            class="bg-primary max-lg:w-1/2 w-2/5 h-14 rounded-2xl flex items-center justify-center text-white font-semibold mb-4"
-          >
-            <h1 class="text-2xl">Área de Cadastro</h1>
-          </section>
-          <section class="flex gap-5">
-            <section class="flex flex-col items-center mr-5 max-lg:mr-0">
-              <section class="flex">
-                <section class="flex flex-col mr-2">
-                  <label
-                    class="my-2 text-label font-semibold after:content-['*'] after:ml-0.5 after:text-red-500"
-                    for="nome"
-                    >Nome</label
-                  >
-                  <input
-                    required
-                    placeholder="Digite seu nome"
-                    class="invalid:outline-red-700 w-44 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2 text-sm peer"
-                    type="text"
-                    id="nome"
-                    pattern="^[A-Za-zÀ-ú]{4,15}$"
-                    name="nome"
-                    autofocus
-                  />
-                </section>
-                <section class="flex flex-col ml-2">
-                  <label
-                    class="my-2 text-label font-semibold after:content-['*'] after:ml-0.5 after:text-red-500"
-                    for="sobrenome"
-                    >Sobrenome
-                  </label>
-                  <input
-                    required
-                    placeholder="Digite seu sobrenome"
-                    class="invalid:outline-red-700 w-44 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2 text-sm"
-                    type="text"
-                    id="sobrenome"
-                    name="sobrenome"
-                    pattern="^[A-Za-zÀ-ú]{4,15}$"
-                  />
-                </section>
+        <section class="justify-center pt-7 flex items-center">
+          <span class="font-bold text-2xl max-lg:text-lg text-padrao"
+            >Tela de cadastro
+          </span>
+        </section>
+        <section class="flex justify-center items-center p-7">
+          <section class="flex gap-10 max-lg:flex-col">
+            <section class="flex flex-col gap-3">
+              <section class="flex flex-col">
+                <label for="nome" class="text-label">Nome</label>
+                <input
+                  class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
+                  type="text"
+                  name="nome"
+                />
               </section>
-              <section class="flex">
-                <section class="flex flex-col mr-2">
-                  <label
-                    class="my-2 text-label font-semibold after:content-['*'] after:ml-0.5 after:text-red-500"
-                    for="cpf"
-                    >CPF
-                  </label>
-                  <input
-                    required
-                    placeholder="Digite seu CPF"
-                    class="invalid:outline-red-700 w-44 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2 text-sm"
-                    type="text"
-                    id="cpf"
-                    name="cpf"
-                    maxlength="14"
-                    pattern="^[0-9\.\-]{14}"
-                  />
+              <section class="flex gap-5">
+                <section class="flex flex-col">
+                  <label for="sexo" class="text-label">Sexo</label>
+                  <select
+                    class="h-10 w-full pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
+                    name="sexo"
+                  >
+                    <option value="s" disabled selected>Qual seu sexo</option>
+                    <option value="m">Masculino</option>
+                    <option value="f">Feminino</option>
+                    <option value="o">Outros</option>
+                  </select>
                 </section>
-                <section class="flex flex-col ml-2">
-                  <label
-                    class="my-2 text-label font-semibold after:content-['*'] after:ml-0.5 after:text-red-500"
-                    for="data"
-                    >Data de nascimento</label
+                <section class="flex flex-col">
+                  <label for="dataNascimento" class="text-label"
+                    >Data de Nascimento</label
                   >
                   <input
-                    required
-                    class="invalid:outline-red-700 w-44 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2 text-sm"
+                    class="h-10 w-full pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
                     type="date"
-                    id="data"
-                    name="data"
-                    pattern="^(0[1-9]|[12][0-9]|3[01])\/(0[1-9]|1[0-2])\/\d{4}$"
+                    name="dataNascimento"
                   />
                 </section>
               </section>
               <section class="flex flex-col">
-                <label
-                  class="my-2 text-label font-semibold after:content-['*'] after:ml-0.5 after:text-red-500"
-                  for="sexo"
-                  >Sexo</label
-                >
-                <select
-                  id="sexo"
-                  name="sexo"
-                  class="w-368 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2 text-sm"
-                  required
-                >
-                  <option value="i" disabled selected>Selecione o sexo</option>
-                  <option value="m">Masculino</option>
-                  <option value="f">Feminino</option>
-                  <option value="o">Outros</option>
-                </select>
+                <label for="cpf" class="text-label">CPF</label>
+                <input
+                  class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
+                  type="text"
+                  name="cpf"
+                />
               </section>
               <section class="flex flex-col">
-                <label class="my-2 text-label font-semibold" for="nome-materno"
-                  >Nome materno</label
+                <label for="nomeMaterno" class="text-label">Nome Materno</label>
+                <input
+                  class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
+                  type="text"
+                  name="nomeMaterno"
+                />
+              </section>
+              <section class="flex flex-col">
+                <label for="telCelular" class="text-label"
+                  >Telefone Celular</label
                 >
                 <input
-                  required
-                  placeholder="Digite o nome Materno"
-                  class="invalid:outline-red-700 w-368 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2 text-sm"
+                  class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
                   type="text"
-                  maxlength="30"
-                  name="nomeMaterno"
-                  pattern="^[A-Za-zÀ-ú]{4,30}$"
+                  name="telCelular"
                 />
               </section>
             </section>
-            <section class="flex flex-col items-center ml-5 max-lg:ml-0">
-              <section class="flex">
-                <section class="flex flex-col mr-2">
-                  <label
-                    class="my-2 text-label font-semibold after:content-['*'] after:ml-0.5 after:text-red-500"
-                    for="tel-cel"
-                    >Telefone celular</label
-                  >
-                  <input
-                    required
-                    placeholder="(XX) XXXXX-XXXX"
-                    class="invalid:outline-red-700 w-44 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2 text-sm"
-                    type="tel"
-                    id="tel-cel"
-                    maxlength="15"
-                    name="telCelular"
-                    pattern="^[0-9\(\)\-\s]{15}$"
-                  />
-                </section>
-                <section class="flex flex-col ml-2">
-                  <label class="my-2 text-label font-semibold" for="tel-fix"
-                    >Telefone fixo</label
-                  >
-                  <input
-                    placeholder="(XX) XXXX-XXXX"
-                    type="tel"
-                    id="tel-fix"
-                    class="invalid:outline-red-700 w-44 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2 text-sm"
-                    maxlength="14"
-                    pattern="^[0-9\(\)\-\s]{14}$"
-                    name="telFixo"
-                  />
-                </section>
+            <section class="flex flex-col gap-3">
+              <section class="flex flex-col">
+                <label for="telFixo" class="text-label">Telefone Fixo</label>
+                <input
+                  class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
+                  type="text"
+                  name="telFixo"
+                />
               </section>
               <section class="flex flex-col">
-                <label
-                  class="my-2 text-label font-semibold after:content-['*'] after:ml-0.5 after:text-red-500"
-                  for="endereco"
-                  >Endereço</label
+                <label for="endereco" class="text-label"
+                  >Endereço completo</label
                 >
                 <input
-                  required
-                  placeholder="Digite seu endereço completo"
-                  class="invalid:outline-red-700 w-368 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2 text-sm"
+                  class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
                   type="text"
-                  id="endereco"
                   name="endereco"
                 />
               </section>
               <section class="flex flex-col">
-                <label
-                  class="my-2 text-label font-semibold after:content-['*'] after:ml-0.5 after:text-red-500"
-                  for="login"
-                  >Login</label
-                >
+                <label for="login" class="text-label">Login</label>
                 <input
-                  required
-                  placeholder="Digite seu login"
-                  class="invalid:outline-red-700 w-368 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2 text-sm"
+                  class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
                   type="text"
-                  id="login"
-                  pattern="^[A-Za-z]{6}$"
                   name="login"
                 />
               </section>
-              <section class="flex">
-                <section class="flex-col flex mr-2">
-                  <label
-                    class="my-2 text-label font-semibold after:content-['*'] after:ml-0.5 after:text-red-500"
-                    for="senha"
-                    >Senha</label
-                  >
-                  <input
-                    required
-                    placeholder="Digite uma senha"
-                    class="invalid:outline-red-700 w-44 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2 text-sm"
-                    type="password"
-                    id="senha"
-                    pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*\d).{8}$"
-                    name="senha"
-                  />
-                </section>
-                <section class="flex flex-col ml-2">
-                  <label
-                    class="my-2 text-label font-semibold after:content-['*'] after:ml-0.5 after:text-red-500"
-                    for="confirm-senha"
-                    >Confirmar senha
-                  </label>
-                  <input
-                    required
-                    placeholder="Comfirme sua senha"
-                    class="invalid:outline-red-700 w-44 h-10 text-center bg-zinc-400 text-black placeholder:text-stone-900 pl-2 text-sm"
-                    type="password"
-                    id="confirm-senha"
-                    pattern="^(?=.*[A-Z])(?=.*[a-z])(?=.*\d).{8}$"
-                  />
-                </section>
+              <section class="flex flex-col">
+                <label for="senha" class="text-label">Senha</label>
+                <input
+                  class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
+                  type="password"
+                  name="senha"
+                />
+              </section>
+              <section class="flex flex-col">
+                <label for="comSenha" class="text-label">Confirmar senha</label>
+                <input
+                  class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
+                  type="password"
+                  name="comSenha"
+                />
               </section>
             </section>
           </section>
-          <section class="relative w-full">
-            <button
-              class="absolute font-semibold text-padrao top-14 centralizar border-red-800 border w-44 h-10 hover:bg-red-800 hover:text-white transition-colors" name="enviar-cadastro"
-            >
-              Enviar
-            </button>
-            <section>
-              <span
-                class="max-lg:right-0 max-lg:top-10 absolute text-xs text-padrao right-36 top-6"
-                >Já é cliente Telecall? <br />
-                <a class="font-semibold text-red-700" href="paginaLogin.html"
-                  >Fazer login</a
-                >
-              </span>
+        </section>
+        <section
+          class="flex-none w-full p-3 flex justify-center items-center relative max-lg:mb-12"
+        >
+        <section >
+              <section>
+                <span class="absolute text-xs top-0 right-44 max-lg:right-5 text-padrao"
+                  >Já é cliente?<br />
+                  <a
+                    class="text-red-700 font-semibold"
+                    href="paginaLoginTipo.html"
+                    >Faça o login aqui.</a
+                  >
+                </span>
+              </section>
             </section>
-          </section>
+          <button
+            class="font-semibold hover:bg-red-700 bg-modal-button hover:text-white transition-colors shadow-xl w-32 h-10 border-red-700 border text-padrao"
+          >
+            Enviar
+          </button>
         </section>
       </form>
     </main>
+    <section
+      class="bg-primary flex w-full fixed bottom-0 h-6 justify-end pr-5 items-center gap-5"
+    >
+      <button
+        id="themes"
+        class="flex text-sm justify-center items-center text-padrao bg-modal-button rounded-full h-5 px-2"
+      >
+        <img
+          src="img/icons/theme.png"
+          class="invert w-4"
+          alt="icon perfil"
+        />Tema
+      </button>
+    </section>
     <script src="js/trocarTema.js"></script>
     <script src="js/mascara.js"></script>
   </body>
