build: redefinir senha, error auth

--- a/src/paginaCadastro.html
+++ b/src/paginaCadastro.html
@@ -85,6 +85,8 @@
                   class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
                   type="text"
                   name="cpf"
+                  id="cpf"
+                  maxlength="14"
                 />
               </section>
               <section class="flex flex-col">
@@ -103,6 +105,7 @@
                   class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
                   type="text"
                   name="telCelular"
+                  id="telCelular"
                 />
               </section>
             </section>
