--- a/src/paginaLoginComum.html
+++ b/src/paginaLoginComum.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Telecall - Pagina Principal</title>
+    <title>Telecall - Tela de Login Comum</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -67,7 +67,7 @@
           <section class="flex flex-col justify-center items-center relative">
             <section >
               <section>
-                <span class="absolute text-xs left-1/4 max-lg:-left-4 -top-12 text-padrao"
+                <span class="absolute text-xs left-16 max-lg:-left-4 -top-12 text-padrao"
                   >Ainda não é cliente?<br />
                   <a
                     class="text-red-700 font-semibold"
@@ -78,7 +78,7 @@
               </section>
               <section>
                 <a
-                  class="text-red-700 font-semibold absolute text-xs right-1/4 max-lg:-right-4 -top-12"
+                  class="text-red-700 font-semibold absolute text-xs right-16 max-lg:-right-4 -top-12"
                   href="redefinirSenha.html"
                   >Esqueci a senha</a
                 >
