--- a/src/redefinirSenha2.html
+++ b/src/redefinirSenha2.html
@@ -41,28 +41,38 @@
         id="cliente"
         class="bg-modal shadow-lg shadow-stone-700 w-2/4 absolute top-por left-2/4 -translate-x-2/4 -translate-y-2/4 rounded-lg border border-stone-500 max-lg:w-full"
       >
-        <a
-          href="paginaLoginTipo.html"
-          class="absolute top-8 text-padrao left-8 text-lg"
-          >Voltar</a
-        >
         <section class="justify-center flex items-center">
           <span class="font-bold text-2xl max-lg:text-xl text-padrao pt-5"
             >Redefinir Senha</span
           >
         </section>
-        <section class="flex flex-col items-center justify-center pb-5 pt-8">
-          <label for="login" class="my-2 text-label font-semibold"
-            >Imforme-nos</label
-          >
-          <input
-            placeholder="Login / CPF"
-            class="h-10 w-72 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-            type="text"
-            id="login"
-            name="login"
-            required
-          />
+        <section class="flex flex-col items-center justify-center pb-5 pt-8 gap-4">
+          <section class="flex flex-col">
+            <label for="senha" class="my-2 text-label font-semibold"
+              >Nova Senha</label
+            >
+            <input
+              placeholder="Digite sua nova senha"
+              class="h-10 w-72 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
+              type="text"
+              id="senha"
+              name="senha"
+              required
+            />
+          </section>
+          <section class="flex flex-col">
+            <label for="senha" class="my-2 text-label font-semibold"
+              >Comfirmar Senha</label
+            >
+            <input
+              placeholder="Comfirme a sua nova senha"
+              class="h-10 w-72 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
+              type="text"
+              id="comSenha"
+              name="comSenha"
+              required
+            />
+          </section>
           <section class="w-60">
             <section class="flex w-full justify-evenly mt-10">
               <button
