--- a/src/error/errorLoginExistente.html
+++ b/src/error/errorLoginExistente.html
@@ -30,12 +30,11 @@
       >
         <section class="justify-center flex items-center pt-4">
           <span class="font-bold text-2xl max-lg:text-xl text-padrao"
-            >Error de Autenticação</span
+            >LOGIN JÁ CADASTRADO</span
           >
         </section>
         <p class="text-xl mt-11 text-center w-3/4 text-padrao">
-          Desculpe, mas as informações de login ou senha fornecidas estão
-          incorretas. Por favor, verifique seus dados e tente novamente
+          Desculpe, mas verificamos que já existe este login em nosso sistema.
         </p>
         <section class="flex items-center mt-10 gap-2 pb-7">
           <button
