--- a/src/paginaLoginTipo.html
+++ b/src/paginaLoginTipo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Telecall - Tela do Cliente</title>
+    <title>Telecall - Tela de Login</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -35,7 +35,7 @@
     </header>
     <main>
       <section
-        class="bg-modal shadow-lg shadow-stone-800 max-w-xl absolute top-por left-2/4 -translate-x-2/4 -translate-y-2/4 rounded-lg border border-stone-500 max-lg:w-full"
+        class="bg-modal shadow-lg shadow-stone-800 max-w-xl absolute top-2/4 left-2/4 -translate-x-2/4 -translate-y-2/4 rounded-lg border border-stone-500 max-lg:w-full"
       >
         <section class="px-20 py-14 flex flex-col gap-16">
           <section class="justify-center flex items-center">
