--- a/src/error/errorCpfCadastrado.html
+++ b/src/error/errorCpfCadastrado.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="../css/output.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Error</title>
+    <title>Telecall - Area do Cliente</title>
   </head>
 
   <body class="transition-colors">
@@ -30,12 +30,11 @@
       >
         <section class="justify-center flex items-center pt-4">
           <span class="font-bold text-2xl max-lg:text-xl text-padrao"
-            >Error de Autenticação</span
+            >CPF já Cadastrado</span
           >
         </section>
         <p class="text-xl mt-11 text-center w-3/4 text-padrao">
-          Desculpe, mas as informações de login ou senha fornecidas estão
-          incorretas. Por favor, verifique seus dados e tente novamente
+          Desculpe, mas verificamos que já existe este CPF em nosso sistema.
         </p>
         <section class="flex items-center mt-10 gap-2 pb-7">
           <button
