--- a/src/error/errorRespostaIncorreta.html
+++ b/src/error/errorRespostaIncorreta.html
@@ -30,17 +30,16 @@
       >
         <section class="justify-center flex items-center pt-4">
           <span class="font-bold text-2xl max-lg:text-xl text-padrao"
-            >Error de Autenticação</span
+            >RESPOSTA INCORRETA</span
           >
         </section>
         <p class="text-xl mt-11 text-center w-3/4 text-padrao">
-          Desculpe, mas as informações de login ou senha fornecidas estão
-          incorretas. Por favor, verifique seus dados e tente novamente
+          Desculpe, mas as informação que você forneceu não confere, tente novamente!
         </p>
         <section class="flex items-center mt-10 gap-2 pb-7">
           <button
             class="font-semibold hover:bg-red-700 bg-modal-button hover:text-white transition-colors shadow-xl w-32 h-10 border-red-700 border text-padrao "
-            onclick="window.history.back()"
+            onclick="window.location.href = '../paginaLoginComum.html'"
           >
             Ok
           </button>
