--- a/src/paginaLoginComum.html
+++ b/src/paginaLoginComum.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Telecall - Tela de Login Comum</title>
+    <title>Telecall - Tela de Login</title>
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -37,7 +37,7 @@
       <form
         method="post"
         action="server/auth_comum.php"
-        class="bg-modal shadow-lg shadow-stone-700 w-2/5 absolute top-por left-2/4 -translate-x-2/4 -translate-y-2/4 rounded-lg border border-stone-500 max-lg:w-full"
+        class="bg-modal shadow-lg shadow-stone-700 w-2/5 absolute top-2/4 left-2/4 -translate-x-2/4 -translate-y-2/4 rounded-lg border border-stone-500 max-lg:w-full"
       >
       <a href="paginaLoginTipo.html" class="absolute top-8 text-padrao  left-8 text-lg">Voltar</a>
         <section class="px-20 py-14 flex flex-col gap-14">
@@ -49,6 +49,8 @@
               <label for="login" class="text-label ">Login</label>
               <input
                 type="text"
+                name="login"
+                id="login"
                 class="h-10 w-72 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
                 placeholder="Digite aqui seu login"
                 required
@@ -58,6 +60,8 @@
               <label for="senha" class="text-label ">Senha</label>
               <input
                 type="password"
+                name="senha"
+                id="senha"
                 class="h-10 w-72 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
                 placeholder="Digite aqui sua senha"
                 required
@@ -79,7 +83,7 @@
               <section>
                 <a
                   class="text-red-700 font-semibold absolute text-xs right-16 max-lg:-right-4 -top-12"
-                  href="redefinirSenha.html"
+                  href="redefinirSenha.php"
                   >Esqueci a senha</a
                 >
               </section>
