--- a/src/paginaCadastro.html
+++ b/src/paginaCadastro.html
@@ -23,7 +23,7 @@
 <body>
   <header class="flex bg-primary max-lg:justify-between z-10">
     <section>
-      <img onclick="window.location.href= 'index.html'" id="logo" class="w-4/5 pl-5 py-4 max-sm:w-2/4 cursor-pointer"
+      <img onclick="window.location.href= 'index.php'" id="logo" class="w-4/5 pl-5 py-4 max-sm:w-2/4 cursor-pointer"
         src="img/logotelecall.png" alt="logo-telecall" />
     </section>
   </header>
@@ -41,7 +41,8 @@
               <label for="nome" class="text-label">Nome</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="text" name="nome" pattern="^[A-Za-zÀ-ÖØ-öø-ÿ\s]{13,40}$" required placeholder="Pelo menos (Nome Sobrenome)"/>
+                type="text" name="nome" pattern="^[A-Za-zÀ-ÖØ-öø-ÿ\s]{13,40}$" required
+                placeholder="Pelo menos (Nome Sobrenome)" />
             </section>
             <section class="flex gap-5">
               <section class="flex flex-col">
@@ -49,7 +50,7 @@
                 <select
                   class="h-10 w-full pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
                   name="sexo" required>
-                  <option value="s" disabled selected>Qual seu sexo</option>
+                  <option value="s" disabled selected></option>
                   <option value="m">Masculino</option>
                   <option value="f">Feminino</option>
                   <option value="o">Outros</option>
@@ -59,26 +60,29 @@
                 <label for="dataNascimento" class="text-label">Data de Nascimento</label>
                 <input
                   class="h-10 w-full pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                  type="date" name="dataNascimento" required/>
+                  type="date" name="dataNascimento" required />
               </section>
             </section>
             <section class="flex flex-col">
               <label for="cpf" class="text-label">CPF</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="text" name="cpf" id="cpf" maxlength="14" pattern="^\d{3}\.\d{3}\.\d{3}-\d{2}$" required placeholder="XXX.XXX.XXX-XX"/>
+                type="text" name="cpf" id="cpf" maxlength="14" pattern="^\d{3}\.\d{3}\.\d{3}-\d{2}$" required
+                placeholder="XXX.XXX.XXX-XX" />
             </section>
             <section class="flex flex-col">
               <label for="nomeMaterno" class="text-label">Nome Materno</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="text" name="nomeMaterno" pattern="^[A-Za-zÀ-ÖØ-öø-ÿ\s]{15,40}$" required placeholder="Pelo menos (Nome Sobrenome)"/>
+                type="text" name="nomeMaterno" pattern="^[A-Za-zÀ-ÖØ-öø-ÿ\s]{15,40}$" required
+                placeholder="Pelo menos (Nome Sobrenome)" />
             </section>
             <section class="flex flex-col">
               <label for="telCelular" class="text-label">Telefone Celular</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="text" name="telCelular" id="telCelular" pattern="^\([1-9]{2}\) 9[0-9]{4}-[0-9]{4}$" maxlength="15" required placeholder="(XX) 9XXXX-XXXX"/>
+                type="text" name="telCelular" id="telCelular" pattern="^\([1-9]{2}\) 9[0-9]{4}-[0-9]{4}$" maxlength="15"
+                required placeholder="(XX) 9XXXX-XXXX" />
             </section>
           </section>
           <section class="flex flex-col gap-3">
@@ -86,19 +90,21 @@
               <label for="telFixo" class="text-label">Telefone Fixo</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="text" name="telFixo" id="telFixo" pattern="^\([1-9]{2}\) [0-9]{4}-[0-9]{4}$" maxlength="14" required  placeholder="(XX) XXXX-XXXX"/>
+                type="text" name="telFixo" id="telFixo" pattern="^\([1-9]{2}\) [0-9]{4}-[0-9]{4}$" maxlength="14"
+                required placeholder="(XX) XXXX-XXXX" />
             </section>
             <section class="flex flex-col">
               <label for="cep" class="text-label">CEP</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="text" name="cep" id="cep" pattern="^[0-9]{8}$" required placeholder="XXXXXXXX"/>
+                type="text" name="cep" id="cep" pattern="^[0-9]{8}$" required placeholder="XXXXXXXX" />
             </section>
             <section class="flex flex-col">
               <label for="rua" class="text-label">Rua e N°</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="text" name="rua" id="rua" pattern="^[rR]ua\s[A-Za-zÀ-ÖØ-öø-ÿ\s]{1,50}$" required placeholder="Rua XXXXXXXXX N°"/>
+                type="text" name="rua" id="rua" pattern="^[rR]ua\s[A-Za-zÀ-ÖØ-öø-ÿ\s]{1,50}$" required
+                placeholder="Rua XXXXXXXXX N°" />
             </section>
             <section class="flex flex-col">
               <label for="complemento" class="text-label">Complemento</label>
@@ -118,36 +124,37 @@
               <label for="localidade" class="text-label">Localidade</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="text" name="localidade" id="localidade" required  placeholder="Localização" />
+                type="text" name="localidade" id="localidade" required placeholder="Localização" />
             </section>
             <section class="flex flex-col">
               <label for="uf" class="text-label">UF</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="text" name="uf" id="uf" placeholder="XX"  required/>
+                type="text" name="uf" id="uf" placeholder="XX" required />
             </section>
             <section class="flex flex-col">
               <label for="login" class="text-label">Login</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="text" name="login" pattern="^[A-Za-z]{6}$" required placeholder="6 caracteres alfabeticos"/>
+                type="text" name="login" pattern="^[A-Za-z]{6}$" required placeholder="6 caracteres alfabeticos" />
             </section>
             <section class="flex flex-col">
               <label for="senha" class="text-label">Senha</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="password" name="senha" id="senha" pattern="^.{8}$" required placeholder="Maximo 8 caracteres"/>
+                type="password" name="senha" id="senha" pattern="^.{8}$" required placeholder="Maximo 8 caracteres" />
             </section>
             <section class="flex flex-col">
               <label for="comSenha" class="text-label">Confirmar senha</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="password" name="comSenha" id="comSenha" pattern="^.{8}$" required placeholder="Repita sua senha"/>
+                type="password" name="comSenha" id="comSenha" pattern="^.{8}$" required
+                placeholder="Repita sua senha" />
             </section>
           </section>
         </section>
       </section>
-      <section class="flex-none w-full p-3 flex justify-center items-center relative ">
+      <section class="flex-none gap-5 w-full p-3 flex justify-center items-center relative ">
         <section>
           <section>
             <span class="absolute text-xs top-0 right-44 max-sm:right-3 text-padrao">Já é cliente?<br />
@@ -155,14 +162,20 @@
             </span>
           </section>
           <section>
-            <span id="mensagemError" class=" hidden absolute text-xs top-5 left-36 max-sm:left-3 text-padrao text-red-700 font-black animate-bounce">
+            <span id="mensagemError"
+              class=" hidden absolute text-xs top-5 left-36 max-sm:left-3 text-padrao text-red-700 font-black animate-bounce">
               Senhas não conferem
             </span>
           </section>
         </section>
         <button
-          class="font-semibold hover:bg-red-700 bg-modal-button hover:text-white transition-colors shadow-xl w-32 h-10 border-red-700 border text-padrao" id="cadastrar">
+          class="font-semibold hover:bg-red-700 bg-modal-button hover:text-white transition-colors shadow-xl w-32 h-10 border-red-700 border text-padrao"
+          id="cadastrar">
           Enviar
+        </button>
+        <button type="reset"
+          class="font-semibold hover:bg-red-700 bg-modal-button hover:text-white transition-colors shadow-xl w-10 h-10 border-red-700 border text-padrao ">
+          &#10006;
         </button>
       </section>
     </form>
