--- a/src/paginaLoginMaster.html
+++ b/src/paginaLoginMaster.html
@@ -25,7 +25,7 @@
     <header class="flex bg-primary max-lg:justify-between z-10">
       <section>
         <img
-        onclick="window.location.href= 'index.html'"
+        onclick="window.location.href= 'index.php'"
           id="logo"
           class="w-4/5 pl-5 py-4 max-sm:w-2/4 cursor-pointer"
           src="img/logotelecall.png"
@@ -68,12 +68,17 @@
               />
             </section>
           </section>
-          <section class="flex justify-center items-center gap-5">
+          <section class="flex gap-5 justify-center items-center gap-5">
             <button
               class="font-semibold hover:bg-red-700 text-padrao bg-modal-button hover:text-white transition-colors shadow-xl w-32 h-10 border-red-700 border "
             >
               Entrar
             </button>
+            <button
+          type="reset"
+            class="font-semibold hover:bg-red-700 bg-modal-button hover:text-white transition-colors shadow-xl w-10 h-10 border-red-700 border text-padrao ">
+            &#10006;
+          </button>
           </section>
         </section>
       </form>
