--- a/src/paginaCadastro.html
+++ b/src/paginaCadastro.html
@@ -103,7 +103,7 @@
               <label for="rua" class="text-label">Rua e N°</label>
               <input
                 class="h-10 w-80 pl-3 focus:outline-none border bg-slate-50 text-slate-700 border-slate-200 shadow-none invalid:outline-red-600 invalid:text-red-700 placeholder:text-slate-500 focus:invalid:border-red-600 focus:invalid:ring-red-600"
-                type="text" name="rua" id="rua" pattern="^[rR]ua\s[A-Za-zÀ-ÖØ-öø-ÿ\s]{1,50}$" required
+                type="text" name="rua" id="rua" required
                 placeholder="Rua XXXXXXXXX N°" />
             </section>
             <section class="flex flex-col">
