fix: botao de apagar Melhorado

--- a/src/paginaCadastro.html
+++ b/src/paginaCadastro.html
@@ -174,8 +174,8 @@
           Enviar
         </button>
         <button type="reset"
-          class="font-semibold hover:bg-red-700 bg-modal-button hover:text-white transition-colors shadow-xl w-10 h-10 border-red-700 border text-padrao ">
-          &#10006;
+          class="font-semibold hover:bg-red-700 px-5 bg-modal-button hover:text-white transition-colors shadow-xl  h-10 border-red-700 border text-padrao ">
+          limpar
         </button>
       </section>
     </form>
